...
                    cursorColor = MaterialTheme.colorScheme.primary,
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .bringIntoViewRequester(bringIntoViewRequester)
                    .focusRequester(focusRequester)
                    .testTag("create_post_text_body"),
                minLines = 3,
                isError = isContentError,
                keyboardOptions = KeyboardOptions(imeAction = ImeAction.Default),
            )
        }

...
